# pcie_sdk_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libpcie_sdk.so.1.2.2  start_ros2pub.sh  start_rospub.sh
config/: alg_isx_019_1_ch.json  alg_isx_021_2_ch.json  alg_ox08b_1_ch.json
demo/c/: demo_service.c
demo/python/: stream_on_off.py
include/alg_sdk/: alg_sdk.h  basic_types.h  client.h  log.h  server.h  service.h  util.h
include/nanomsg/: nn.h
include/pub_sub/: alg_sdk.h  basic_types.h  client.h  log.h  server.h  service.h  util.h
lib/: libpcie_sdk.so.0  libpcie_sdk.so.0.1.0  libpcie_sdk.so.0.2.0
lib/linux/: libnanomsg.so.6  libnanomsg.so.6.0.1  libpcie_sdk.so.0  libpcie_sdk.so.0.2.2  libpcie_sdk.so.0.2.3  libpcie_sdk.so.0.3.0  libpcie_sdk.so.0.3.1  libpcie_sdk.so.0.3.3  libpcie_sdk.so.0.3.4
pcie_sdk/include/alg_common/: basic_types.h  libpcie_sdk.so.1.2.0
pcie_sdk/include/alg_cvt/: alg_cvtColor.h
pcie_sdk/include/alg_isp/: alg_isp_pipeline.h
pcie_sdk/include/alg_sdk/: alg_sdk.h  client.h  server.h  service.h  stream.h  util.h
pcie_sdk/include/cuda/: cudaMappedMemory.h  cudaUtility.h
pcie_sdk/include/gl_disp/: alg_camera.h  glBuffer.h  glDisplay.h
pcie_sdk/include/gl_display/: glDisplay.h
pcie_sdk/include/jetson-utils/: Mutex.h  RingBuffer.h  RingBuffer.inl  cuda_impl.h  gstUtility.h  imageFormat.h  imageFormat.inl  mat33.h
pcie_sdk/lib/linux/: libpcie_sdk.so.0  libpcie_sdk.so.0.10.1  libpcie_sdk.so.0.10.2  libpcie_sdk.so.0.10.4  libpcie_sdk.so.0.11.2  libpcie_sdk.so.0.11.3  libpcie_sdk.so.0.11.5  libpcie_sdk.so.0.12.1  libpcie_sdk.so.0.12.2  libpcie_sdk.so.0.12.3  libpcie_sdk.so.0.13.1  libpcie_sdk.so.0.14.2  libpcie_sdk.so.0.15.1  libpcie_sdk.so.0.15.2  libpcie_sdk.so.0.3.11  libpcie_sdk.so.0.3.5  libpcie_sdk.so.0.3.9  libpcie_sdk.so.0.4.10  libpcie_sdk.so.0.4.3  libpcie_sdk.so.0.4.5  libpcie_sdk.so.0.4.6  libpcie_sdk.so.0.4.7  libpcie_sdk.so.0.4.8  libpcie_sdk.so.0.5.3  libpcie_sdk.so.0.6.2  libpcie_sdk.so.0.6.3  libpcie_sdk.so.0.7.1  libpcie_sdk.so.0.7.2  libpcie_sdk.so.0.7.3  libpcie_sdk.so.0.7.4  libpcie_sdk.so.0.7.6  libpcie_sdk.so.0.7.7  libpcie_sdk.so.0.8.4  libpcie_sdk.so.0.9.1  libpcie_sdk.so.0.9.3  libpcie_sdk_stream.so.0  libpcie_sdk_stream.so.0.10.1  libpcie_sdk_stream.so.0.10.2  libpcie_sdk_stream.so.0.10.3  libpcie_sdk_stream.so.0.10.4  (+7 more)
pcie_sdk/lib/linux/aarch64/: libpcie_sdk.so.0  libpcie_sdk.so.0.15.4  libpcie_sdk.so.0.19.1  libpcie_sdk.so.0.20.1  libpcie_sdk.so.1.3.4.0
pcie_sdk/lib/linux/x86_64/: libalg_cv_IspPipe.so.0  libalg_cv_IspPipe.so.1.0.0.1  libalg_cv_IspPipe.so.1.0.0.2  libalg_cv_cvtColor.so.0  libalg_cv_cvtColor.so.1.0.0.0  libalg_cv_cvtColor.so.1.0.0.1  libalg_cv_cvtColor.so.1.0.0.10  libalg_cv_cvtColor.so.1.0.0.11  libalg_cv_cvtColor.so.1.0.0.2  libalg_cv_cvtColor.so.1.0.0.3  libpcie_sdk.so.0  libpcie_sdk.so.0.15.5  libpcie_sdk.so.0.16.4  libpcie_sdk.so.0.18.1  libpcie_sdk.so.0.18.3  libpcie_sdk.so.0.19.1  libpcie_sdk.so.0.21.2  libpcie_sdk.so.0.21.5  libpcie_sdk.so.0.22.2  libpcie_sdk.so.0.22.3  libpcie_sdk.so.1.0.0  libpcie_sdk.so.1.1.10  libpcie_sdk.so.1.1.2  libpcie_sdk.so.1.1.3  libpcie_sdk.so.1.1.5  libpcie_sdk.so.1.1.6  libpcie_sdk.so.1.1.9  libpcie_sdk.so.1.2.0  libpcie_sdk.so.1.3.0.1  libpcie_sdk.so.1.3.1.1  libpcie_sdk.so.1.3.3.0  libpcie_sdk.so.1.3.4.0  libpcie_sdk.so.1.3.5.0  libpcie_sdk_cuda.so.0  libpcie_sdk_cuda.so.0.2.1  libpcie_sdk_cuda.so.0.3.1  libpcie_sdk_cuda.so.0.3.2  libpcie_sdk_cuda.so.0.3.3  libpcie_sdk_cuda.so.0.3.5  libpcie_sdk_ros.so.0  (+25 more)
src/c/: alg_cvtColor.cpp  alg_cvtColor.h  demo_client.c  demo_image_display.cpp  demo_image_display_cuda.cpp  demo_init.c  demo_service.c  demo_video_stream.cpp  host_memory_manager.cpp  host_memory_manager.h  render.cpp  video_stream.cpp  video_stream.h
src/c/alg_camera/: alg_camera.cpp  alg_camera.h  gst_camera.cpp  gst_camera.h  v4l2_camera.cpp  v4l2_camera.h
src/c/alg_cvt/: alg_cvtColor.cpp  alg_cvtColor.h
src/c/alg_ros2bridge/: alg_ros2pub.cpp  alg_ros2pub.h
src/c/alg_rosbridge/: alg_rospub.cpp  alg_rospub.h
src/c/demo/: demo_client.c  demo_gst_camera.cpp  demo_image_display.cpp  demo_init.c  demo_opengl_display.cpp  demo_rospub.cpp  demo_service.c  demo_v4l2.cpp
src/python/: algSDKpy.py  get_sensor_emb_info.py  get_time.py  init_sdk.py  raw12_display.py  set_camera_pwr_switch.py  set_sensor_config.py  set_sensor_config_from_file.py  set_sensor_emb_info.py  set_sensor_from_json.py  set_time.py  set_trigger_ext.py  set_trigger_int.py  set_trigger_mode.py  stream_off.py  stream_on.py  stream_on_by_channel.py  stream_on_off.py  subscribe.py  video_convert_gst.py
